--- a/src/components/chat/Chat.module.css
+++ b/src/components/chat/Chat.module.css
@@ -1,52 +1,65 @@
-.container {
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.myContainer {
   margin: 0 auto;
   padding: 20px;
-  box-shadow: 0px 10px 8px rgba(0, 0, 0, 0.12);
-  max-width: 50%;
-  backdrop-filter: blur(100px);
-  background: rgba(16, 16, 58, 0.2);
+  max-width: 38%;
+  padding: 20px;
+}
+
+.container {
+  flex-direction: column;
+  justify-content: flex-end;
+  overflow-y: auto;
+  height: 250px;
+  width: 70%;
 }
 
 .title {
-  text-align: center;
+  font-size: 30px;
   margin-top: 30px;
+  font-weight: 500;
+}
+
+.description {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.text {
+  font-size: 20px;
+  color: var(--light-gray-color);
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
+  width: 69%;
 }
 
 .textarea {
-  background-color: var(--midnight-blue);
+  background: var(--background);
   color: var(--text-color);
-  border-radius: 20px;
-  margin-bottom: 20px;
+  border-radius: 12px;
   resize: none;
   font-size: 16px;
   width: 100%;
   box-sizing: border-box;
-  max-height: 50px;
+  max-height: 40px;
   display: flex;
   align-items: center;
-  padding: 14px 50px;
+  padding: 8px 55px;
   overflow-y: hidden;
-  border: none;
+  border: 2px solid var(--border-color);
+  outline: none;
 }
 
 .button {
   position: absolute;
-  right: 10px;
-  top: 34%;
+  right: 2px;
+  top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
-  border-radius: 6px;
-  padding: 5px;
+  border-radius: 10px;
+  padding: 11px;
   display: flex;
   border: none;
 }
@@ -61,26 +74,8 @@
   cursor: not-allowed;
 }
 
-.sendIconWrapper {
-  position: absolute;
-  right: 10px;
-  top: 34%;
-  transform: translateY(-50%);
-  cursor: pointer;
-  border-radius: 6px;
-  padding: 5px;
-  display: flex;
-  border: none;
-}
-
-.sendIconWrapper:hover {
-  background-color: var(--hover-color);
-}
-
-.error {
-  color: red;
-  text-align: center;
-  margin: 0 0 20px 0;
+.buttonEnabled:hover {
+  background-color: var(--border-color);
 }
 
 .history {
@@ -96,7 +91,7 @@
 }
 
 .historyItemUser {
-  background-color: var(--midnight-blue);
+  background-color: var(--border-color);
   padding: 10px;
   border-radius: 18px;
   margin-left: auto;
@@ -109,7 +104,7 @@
 }
 
 .historyItemAI {
-  background-color: var(--midnight-blue);
+  background-color: var(--border-color);
   padding: 10px;
   border-radius: 18px;
   margin-right: auto;
@@ -126,6 +121,7 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  margin-top: 30px;
   animation: spin 1s linear infinite;
   margin: auto;
 }
@@ -146,8 +142,8 @@
 
 .micInside {
   position: absolute;
-  left: 10px;
-  top: 33%;
+  left: 16px;
+  top: 52%;
   transform: translateY(-50%);
   cursor: pointer;
   display: flex;
