--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,19 +1,16 @@
 :root {
-  --background-gradient: linear-gradient(90deg, hsl(243, 100%, 7%) 0%, hsl(240, 84%, 22%) 35%, hsl(208, 97%, 38%) 100%);
-  --midnight-blue: rgb(13, 13, 45);
+  --background: hsl(240deg 60.35% 22.68% / 97%) 35%;
   --text-color:hsl(0, 0%, 100%);
-  --blue-color:hsla(240, 100%, 11.2%, 0.73);
-  --button-color:hsla(246, 86%, 30%, 0.642);
-  --hover-color:hsl(246, 81%, 23%);
-  --dark-gray-color: hsla(0, 0%, 42%, 0.746);
+  --button-color:hsla(214, 80%, 47%, 0.471);
+  --border-color:hsla(214, 86%, 42%, 0.323);
   --light-gray-color: hsla(0, 0%, 83%, 0.738);
 } 
 
 body {
   margin: 0;
   height: 100vh; 
-  background: var(--background-gradient);
-  font-family: 'Roboto', sans-serif; 
+  background: var(--background);
+  font-family: "IBM Plex Sans", sans-serif;
   color: var(--text-color);
 }
 
